- Started homeScreen     - Will take some time to figure out how to make it identical to iPhone, as in, make it scrollable like on iPhone - Made the contact screen, though it does not do anything - At the moment, clicking an item in the homescreen, segues into contact. - Created a custom view that will act as a default list row for us. (Yes, android is not as easy as iPhone :( you need to create your own rows from scratch

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="navigationBarColor">#064CB2</color>
+    <color name="navigationBarDarkColor">#064CA1</color>
+    <color name="foregroundColor">#033e93</color>
+    <color name="backgroundColor">#022a64</color>
+    <color name="accentColor">#fec637</color>
 </resources>
