--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -6,4 +6,5 @@
 
     <dimen name="list_view_title_text_size">21sp</dimen>
     <dimen name="list_view_subtitle_text_size">16sp</dimen>
+    <dimen name="APS_description_field_height">297dp</dimen>
 </resources>
