- Created and fixed the ID system, from now on, all ID's will start with an abbreviation of their associated screen (eg. Home screen's day label will be: HSDayLabel, List Activity's list will be: LSList (the 'S' is for screen)). This will apply for everything from views to strings to dimensions. - Created InfoActivity for viewing announcements.

--- a/app/src/main/res/layout/announcement_activity.xml
+++ b/app/src/main/res/layout/announcement_activity.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/foregroundColor"
-    tools:context="com.wlmac.lyonsden2_android.AnnouncementActivity">
+    tools:context=".contactActivities.AnnouncementActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -19,37 +19,37 @@
         android:text="@string/APSTitle"
         android:textSize="21sp"
         android:textColor="@color/accentColor"
-        android:id="@+id/titleLabel" />
+        android:id="@+id/APSTitleLabel" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@id/titleLabel"
-        android:layout_toEndOf="@id/titleLabel"
+        android:layout_toRightOf="@id/APSTitleLabel"
+        android:layout_toEndOf="@id/APSTitleLabel"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:maxLines="1"
         android:textSize="21sp"
         android:textColor="@color/accentColor"
-        android:id="@+id/titleField"/>
+        android:id="@+id/APSTitleField"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/titleLabel"
+        android:layout_below="@id/APSTitleLabel"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="16dp"
         android:text="@string/APSDescription"
         android:textSize="21sp"
         android:textColor="@color/accentColor"
-        android:id="@+id/descriptionLabel"/>
+        android:id="@+id/APSDescriptionLabel"/>
     
     <EditText
         android:layout_width="match_parent"
         android:layout_height="@dimen/APS_description_field_height"
-        android:layout_below="@id/descriptionLabel"
+        android:layout_below="@id/APSDescriptionLabel"
         android:layout_marginTop="8dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -58,12 +58,12 @@
         android:scrollHorizontally="false"
         android:textSize="21sp"
         android:textColor="@color/accentColor"
-        android:id = "@+id/descriptionField"/>
+        android:id="@+id/APSDescriptionField"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/descriptionField"
+        android:layout_below="@id/APSDescriptionField"
         android:layout_marginTop="8dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -72,12 +72,12 @@
         android:text="@string/APSTeacher"
         android:textSize="21sp"
         android:textColor="@color/accentColor"
-        android:id="@+id/teacherLabel"/>
+        android:id="@+id/APSTeacherLabel"/>
 
     <EditText
         android:layout_width="@dimen/APS_teacher_login_width"
         android:layout_height="wrap_content"
-        android:layout_below="@id/teacherLabel"
+        android:layout_below="@id/APSTeacherLabel"
         android:layout_marginTop="8dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -85,12 +85,12 @@
         android:layout_alignParentEnd="true"
         android:inputType="numberPassword"
         android:textColor="@color/accentColor"
-        android:id="@+id/teacherLogin"/>
+        android:id="@+id/APSTeacherLogin"/>
 
     <EditText
         android:layout_width="@dimen/APS_teacher_login_width"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/teacherLogin"
+        android:layout_below="@+id/APSTeacherLogin"
         android:layout_marginTop="8dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -98,5 +98,5 @@
         android:layout_alignParentEnd="true"
         android:inputType="textPassword"
         android:textColor="@color/accentColor"
-        android:id="@+id/teacherPass"/>
+        android:id="@+id/APSTeacherPass"/>
 </RelativeLayout>
