--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -9,13 +9,12 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/scrollView"
-        android:nestedScrollingEnabled="true">
+        android:id="@+id/HSScrollView">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id = "@+id/contentView">
+            android:id = "@+id/HSContentView">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -31,8 +30,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/todayIsDay"
-                    android:id="@+id/todayIsDay"
+                    android:text="@string/HSTodayIsDay"
+                    android:id="@+id/HSTodayIsDay"
                     android:textSize="24sp"
                     android:textColor="@color/accentColor"
                     android:gravity="center" />
@@ -40,9 +39,9 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/dayLabelDefault"
-                    android:id="@+id/dayLabel"
-                    android:layout_below="@+id/todayIsDay"
+                    android:text="@string/HSDayLabelDefault"
+                    android:id="@+id/HSDayLabel"
+                    android:layout_below="@+id/HSTodayIsDay"
                     android:textColor="@color/accentColor"
                     android:textSize="150dp"
                     android:gravity="center" />
@@ -54,13 +53,13 @@
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentStart="true"
-                    android:id="@+id/courseContainer"
-                    android:layout_below="@+id/dayLabel">
+                    android:id="@+id/HSCourseContainer"
+                    android:layout_below="@+id/HSDayLabel">
 
                     <RelativeLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/period0"
+                        android:id="@+id/HSPeriod0"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentTop="true"
@@ -71,8 +70,8 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/courseCodeDefault"
-                            android:id="@+id/courseCode0"
+                            android:text="@string/HSCourseCodeDefault"
+                            android:id="@+id/HSCourseCode0"
                             android:textColor="@color/accentColor"
                             android:textSize="14sp"
                             android:maxLines="1"
@@ -83,12 +82,12 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/courseNameDefault"
-                            android:id="@+id/courseName0"
+                            android:text="@string/HSCourseNameDefault"
+                            android:id="@+id/HSCourseName0"
                             android:textColor="@color/accentColor"
                             android:textSize="14sp"
                             android:maxLines="1"
-                            android:layout_below="@+id/courseCode0"
+                            android:layout_below="@+id/HSCourseCode0"
                             android:layout_marginLeft="5dp"
                             android:layout_marginTop="5dp"
                             android:layout_marginRight="5dp" />
@@ -96,12 +95,12 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/teacherNameDefault"
-                            android:id="@+id/teacherName0"
+                            android:text="@string/HSTeacherNameDefault"
+                            android:id="@+id/HSTeacherName0"
                             android:textColor="@color/accentColor"
                             android:textSize="14sp"
                             android:maxLines="1"
-                            android:layout_below="@+id/courseName0"
+                            android:layout_below="@+id/HSCourseName0"
                             android:layout_marginLeft="5dp"
                             android:layout_marginTop="5dp"
                             android:layout_marginRight="5dp" />
@@ -109,12 +108,12 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/roomNumberDefault"
-                            android:id="@+id/roomNumber0"
+                            android:text="@string/HSRoomNumberDefault"
+                            android:id="@+id/HSRoomNumber0"
                             android:textColor="@color/accentColor"
                             android:textSize="14sp"
                             android:maxLines="1"
-                            android:layout_below="@+id/teacherName0"
+                            android:layout_below="@+id/HSTeacherName0"
                             android:layout_marginLeft="5dp"
                             android:layout_marginTop="5dp"
                             android:layout_marginRight="5dp"
@@ -127,13 +126,13 @@
                         android:layout_alignParentTop="true"
                         android:layout_toLeftOf="@+id/period2"
                         android:layout_toStartOf="@+id/period2"
-                        android:id="@+id/period1" >
+                        android:id="@+id/HSPeriod1" >
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/courseCodeDefault"
-                            android:id="@+id/courseCode1"
+                            android:text="@string/HSCourseCodeDefault"
+                            android:id="@+id/HSCourseCode1"
                             android:textColor="@color/accentColor"
                             android:textSize="14sp"
                             android:maxLines="1"
@@ -144,12 +143,12 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/courseNameDefault"
-                            android:id="@+id/courseName1"
+                            android:text="@string/HSCourseNameDefault"
+                            android:id="@+id/HSCourseName1"
                             android:textColor="@color/accentColor"
                             android:textSize="14sp"
                             android:maxLines="1"
-                            android:layout_below="@+id/courseCode1"
+                            android:layout_below="@+id/HSCourseCode1"
                             android:layout_marginLeft="5dp"
                             android:layout_marginTop="5dp"
                             android:layout_marginRight="5dp" />
@@ -157,12 +156,12 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/teacherNameDefault"
-                            android:id="@+id/teacherName1"
+                            android:text="@string/HSTeacherNameDefault"
+                            android:id="@+id/HSTeacherName1"
                             android:textColor="@color/accentColor"
                             android:textSize="14sp"
                             android:maxLines="1"
-                            android:layout_below="@+id/courseName1"
+                            android:layout_below="@+id/HSCourseName1"
                             android:layout_marginLeft="5dp"
                             android:layout_marginTop="5dp"
                             android:layout_marginRight="5dp" />
@@ -170,12 +169,12 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/roomNumberDefault"
-                            android:id="@+id/roomNumber1"
+                            android:text="@string/HSRoomNumberDefault"
+                            android:id="@+id/HSRoomNumber1"
                             android:textColor="@color/accentColor"
                             android:textSize="14sp"
                             android:maxLines="1"
-                            android:layout_below="@+id/teacherName1"
+                            android:layout_below="@+id/HSTeacherName1"
                             android:layout_marginLeft="5dp"
                             android:layout_marginTop="5dp"
                             android:layout_marginRight="5dp"
@@ -188,14 +187,14 @@
                         android:layout_alignParentTop="true"
                         android:layout_toLeftOf="@+id/period3"
                         android:layout_toStartOf="@+id/period3"
-                        android:id="@+id/period2"
-                        android:layout_alignBottom="@+id/period1">
+                        android:id="@+id/HSPeriod2"
+                        android:layout_alignBottom="@+id/HSPeriod1">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/courseCodeDefault"
-                            android:id="@+id/courseCode2"
+                            android:text="@string/HSCourseCodeDefault"
+                            android:id="@+id/HSCourseCode2"
                             android:textColor="@color/accentColor"
                             android:textSize="14sp"
                             android:maxLines="1"
@@ -206,12 +205,12 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/courseNameDefault"
-                            android:id="@+id/courseName2"
+                            android:text="@string/HSCourseNameDefault"
+                            android:id="@+id/HSCourseName2"
                             android:textColor="@color/accentColor"
                             android:textSize="14sp"
                             android:maxLines="1"
-                            android:layout_below="@+id/courseCode2"
+                            android:layout_below="@+id/HSCourseCode2"
                             android:layout_marginLeft="5dp"
                             android:layout_marginTop="5dp"
                             android:layout_marginRight="5dp" />
@@ -219,12 +218,12 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/teacherNameDefault"
-                            android:id="@+id/teacherName2"
+                            android:text="@string/HSTeacherNameDefault"
+                            android:id="@+id/HSTeacherName2"
                             android:textColor="@color/accentColor"
                             android:textSize="14sp"
                             android:maxLines="1"
-                            android:layout_below="@+id/courseName2"
+                            android:layout_below="@+id/HSCourseName2"
                             android:layout_marginLeft="5dp"
                             android:layout_marginTop="5dp"
                             android:layout_marginRight="5dp" />
@@ -232,12 +231,12 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/roomNumberDefault"
-                            android:id="@+id/roomNumber2"
+                            android:text="@string/HSRoomNumberDefault"
+                            android:id="@+id/HSRoomNumber2"
                             android:textColor="@color/accentColor"
                             android:textSize="14sp"
                             android:maxLines="1"
-                            android:layout_below="@+id/teacherName2"
+                            android:layout_below="@+id/HSTeacherName2"
                             android:layout_marginLeft="5dp"
                             android:layout_marginTop="5dp"
                             android:layout_marginRight="5dp"
@@ -250,14 +249,14 @@
                         android:layout_alignParentTop="true"
                         android:layout_alignParentRight="true"
                         android:layout_alignParentEnd="true"
-                        android:id="@+id/period3"
-                        android:layout_alignBottom="@+id/period2">
+                        android:id="@+id/HSPeriod3"
+                        android:layout_alignBottom="@+id/HSPeriod2">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/courseCodeDefault"
-                            android:id="@+id/courseCode3"
+                            android:text="@string/HSCourseCodeDefault"
+                            android:id="@+id/HSCourseCode3"
                             android:textColor="@color/accentColor"
                             android:textSize="14sp"
                             android:maxLines="1"
@@ -268,12 +267,12 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/courseNameDefault"
-                            android:id="@+id/courseName3"
+                            android:text="@string/HSCourseNameDefault"
+                            android:id="@+id/HSCourseName3"
                             android:textColor="@color/accentColor"
                             android:textSize="14sp"
                             android:maxLines="1"
-                            android:layout_below="@+id/courseCode3"
+                            android:layout_below="@+id/HSCourseCode3"
                             android:layout_marginLeft="5dp"
                             android:layout_marginTop="5dp"
                             android:layout_marginRight="5dp" />
@@ -281,12 +280,12 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/teacherNameDefault"
-                            android:id="@+id/teacherName3"
+                            android:text="@string/HSTeacherNameDefault"
+                            android:id="@+id/HSTeacherName3"
                             android:textColor="@color/accentColor"
                             android:textSize="14sp"
                             android:maxLines="1"
-                            android:layout_below="@+id/courseName3"
+                            android:layout_below="@+id/HSCourseName3"
                             android:layout_marginLeft="5dp"
                             android:layout_marginTop="5dp"
                             android:layout_marginRight="5dp" />
@@ -294,12 +293,12 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/roomNumberDefault"
-                            android:id="@+id/roomNumber3"
+                            android:text="@string/HSRoomNumberDefault"
+                            android:id="@+id/HSRoomNumber3"
                             android:textColor="@color/accentColor"
                             android:textSize="14sp"
                             android:maxLines="1"
-                            android:layout_below="@+id/teacherName3"
+                            android:layout_below="@+id/HSTeacherName3"
                             android:layout_marginLeft="5dp"
                             android:layout_marginTop="5dp"
                             android:layout_marginRight="5dp"
@@ -317,7 +316,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:id="@+id/homeScreenList"
+                android:id="@+id/HSList"
                 android:layout_gravity="center_horizontal"
                 android:background="@color/foregroundColor"
                 android:divider="@color/accentColor"
