--- a/app/src/main/res/layout/list_activity.xml
+++ b/app/src/main/res/layout/list_activity.xml
@@ -19,5 +19,5 @@
         android:background="@color/foregroundColor"
         android:divider="@color/accentColor"
         android:dividerHeight="1dp"
-        android:id="@+id/clubs_events_list"/>
+        android:id="@+id/LSClubsEventsList" />
 </RelativeLayout>
