--- a/app/src/main/res/layout/list_viewer_activity.xml
+++ b/app/src/main/res/layout/list_viewer_activity.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundColor"
-    tools:context="com.wlmac.lyonsden2_android.ListViewerActivity">
+    tools:context=".resourceActivities.ListViewerActivity">
 
     <ListView
         android:layout_width="match_parent"
@@ -19,5 +19,5 @@
         android:background="@color/foregroundColor"
         android:divider="@color/accentColor"
         android:dividerHeight="1dp"
-        android:id="@+id/viewerList"/>
+        android:id="@+id/LVSList"/>
 </RelativeLayout>
