--- a/app/src/main/res/layout/list_activity.xml
+++ b/app/src/main/res/layout/list_activity.xml
@@ -1,23 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/LDLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.wlmac.lyonsden2_android.ListActivity"
-    android:background="@color/backgroundColor">
+    android:layout_height="match_parent">
 
-    <ListView
+    <!-- List screen -->
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_centerInParent="true"
-        android:background="@color/foregroundColor"
+        tools:context="com.wlmac.lyonsden2_android.ListActivity"
+        android:background="@color/backgroundColor">
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_centerInParent="true"
+            android:background="@color/foregroundColor"
+            android:divider="@color/accentColor"
+            android:dividerHeight="1dp"
+            android:id="@+id/LSClubsEventsList" />
+    </RelativeLayout>
+
+    <!-- Navigation drawer -->
+    <ListView
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left|start"
+        android:choiceMode="singleChoice"
         android:divider="@color/accentColor"
         android:dividerHeight="1dp"
-        android:id="@+id/LSClubsEventsList" />
-</RelativeLayout>
+        android:background="@color/backgroundColor"
+        android:id="@+id/LDList"/>
+</android.support.v4.widget.DrawerLayout>
