- Imported Firebase into the project     - Some device setup may be necessary - Implemented the Clubs and Events section     - InfoActivity now works properly, with its repositioning (All Hail LinearLayout!!!)     - ClubActivity has been created - Implemented Firebase into Clubs and Events section     - They are now fully web-based     - Will need to make minor string-manipulation adjustments for more accurate output

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,4 +27,10 @@
     <dimen name="ISDescriptionHeight">290dp</dimen>
     <dimen name="ISTitleTextSize">24sp</dimen>
     <dimen name="ISTextSize">20sp</dimen>
+
+    <dimen name="ClubSTitleTextSize">24sp</dimen>
+    <dimen name="ClubSDescriptionTextSize">17sp</dimen>
+    <dimen name="ClubSMemberTextSize">18sp</dimen>
+    <dimen name="ClubSButtonTextSize">19sp</dimen>
+    <dimen name="ClubSDescriptionHeight">88dp</dimen>
 </resources>
