--- a/app/src/main/res/layout/info_activity.xml
+++ b/app/src/main/res/layout/info_activity.xml
@@ -11,34 +11,37 @@
     android:id="@+id/ISContentView"
     tools:context="com.wlmac.lyonsden2_android.resourceActivities.InfoActivity">
 
-    <ImageView
-        android:layout_width="@dimen/ISImageViewWidth"
-        android:layout_height="@dimen/ISImageViewHeight"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:id="@+id/ISImageView"/>
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/ISImageViewHeight"
-        android:layout_toEndOf="@+id/ISImageView"
-        android:layout_toRightOf="@id/ISImageView"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:gravity="start"
-        android:text="@string/ISTitleDefault"
-        android:textColor="@color/accentColor"
-        android:textSize="@dimen/ISTitleTextSize"
-        android:id="@+id/ISTitleLabel"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:clipChildren="true"
+        android:id="@+id/ISTopSection">
+
+        <ImageView
+            android:layout_width="@dimen/ISImageViewWidth"
+            android:layout_height="@dimen/ISImageViewHeight"
+            android:layout_weight="0.75"
+            android:contentDescription="@string/ISImageContentDescription"
+            android:id="@+id/ISImageView"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="@dimen/ISImageViewHeight"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:gravity="start"
+            android:text="@string/ISTitleDefault"
+            android:textColor="@color/accentColor"
+            android:textSize="@dimen/ISTitleTextSize"
+            android:id="@+id/ISTitleLabel"/>
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="@dimen/ISDescriptionHeight"
-        android:layout_below="@id/ISImageView"
+        android:layout_below="@id/ISTopSection"
         android:layout_marginTop="8dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -49,35 +52,37 @@
         android:textSize="@dimen/ISTextSize"
         android:id="@+id/ISDescriptionLabel"/>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/ISDescriptionLabel"
-        android:layout_marginTop="8dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:gravity="start"
-        android:text="@string/ISTimeDefault"
-        android:textColor="@color/accentColor"
-        android:textSize="@dimen/ISTextSize"
-        android:id="@+id/ISDateLabel"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/ISDescriptionLabel"
-        android:layout_marginTop="8dp"
-        android:layout_toRightOf="@id/ISDateLabel"
-        android:layout_toEndOf="@id/ISDateLabel"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:gravity="end"
-        android:text="@string/ISLocationDefault"
-        android:textColor="@color/accentColor"
-        android:textSize="@dimen/ISTextSize"
-        android:id="@+id/ISLocationLabel"/>
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/ISTimeDefault"
+            android:textColor="@color/accentColor"
+            android:textSize="@dimen/ISTextSize"
+            android:id="@+id/ISDateLabel"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:gravity="right|end"
+            android:text="@string/ISLocationDefault"
+            android:textColor="@color/accentColor"
+            android:textSize="@dimen/ISTextSize"
+            android:id="@+id/ISLocationLabel"/>
+    </LinearLayout>
 </RelativeLayout>
